增加二维码分享到微信
二维码使用jquery.qrcode生成。

--- a/share.html
+++ b/share.html
@@ -20,6 +20,12 @@
             font-size: 50px;
         }
         i:before{margin-right: 5px}
+
+        #J_qr_code_share{
+            position: absolute;
+            border:5px solid #fff;
+            font-size: 0;
+        }
     </style>
 </head>
 <body>
@@ -34,8 +40,7 @@
     <i data-type="tsina" class="fa fa-weibo btn-share" title="">新浪微博</i>
     <i data-type="tqq" class="fa fa-tencent-weibo btn-share" title="">腾讯微博</i>
     <i data-type="qzone" class="fa fa-weixin btn-share" title="">QQ空间</i>
-
-
+    <i data-type="weixin" class="fa fa-weixin btn-share" title="">微信</i>
 </div>
 
 
